<resources>
    <string name="app_name">Hello Robot</string>
    <string name="say_hello">Say Hello!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="clear">C</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">÷</string>
    <string name="multi">×</string>
    <string name="point">.</string>
    <string name="sqrt">√</string>
    <string name="mod">+/-</string>
    <string name="square">x²</string>

</resources>
